<?xml version="1.0" encoding="UTF-8"?>

<!--
Copyright 2019 Foreseeti AB

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.foreseeti.mal</groupId>
    <artifactId>mal</artifactId>
    <version>0.1.0-SNAPSHOT</version>
  </parent>

  <artifactId>mal.app</artifactId>
  <packaging>jar</packaging>
  <name>MAL Compiler</name>

  <properties>
    <project.mainClass>com.foreseeti.mal.Main</project.mainClass>
  </properties>

  <dependencies>
    <dependency>
      <groupId>info.picocli</groupId>
      <artifactId>picocli</artifactId>
      <version>4.0.0-beta-1b</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.5.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.squareup</groupId>
      <artifactId>javapoet</artifactId>
      <version>1.12.0-SNAPSHOT</version>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </testResource>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
      <testResource>
        <directory>target/generated-test-sources</directory>
        <includes>
          <include>attackerProfile.ttc</include>
        </includes>
      </testResource>
      <testResource>
        <directory>target/generated-bled-sources</directory>
        <includes>
          <include>bled/attackerProfile.ttc</include>
        </includes>
      </testResource>
    </testResources>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <versionRange>[1.6.0,)</versionRange>
                    <goals>
                      <goal>java</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>11</release>
          <compilerArgument>-Xlint:all</compilerArgument>
          <compilerArgument>-Xlint:-requires-transitive-automatic</compilerArgument>
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <forkCount>0</forkCount>
          <useSystemClassLoader>false</useSystemClassLoader>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestFile>target/classes/META-INF/MANIFEST.MF</manifestFile>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifestFile>target/classes/META-INF/MANIFEST.MF</manifestFile>
          </archive>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>Generating vehicleLang</id>
            <phase>generate-test-sources</phase>
            <goals>
              <goal>java</goal>
            </goals>
            <configuration>
              <mainClass>com.foreseeti.mal.Main</mainClass>
              <arguments>
                <argument>${project.basedir}/src/test/resources/generator/reference/vehicleLang.mal</argument>
                <argument>--args</argument>
                <argument>path=${project.basedir}/target/generated-test-sources,package=vehicle</argument>
              </arguments>
              <testSourceRoot>${project.basedir}/target/generated-test-sources</testSourceRoot>
            </configuration>
          </execution>
          <execution>
            <id>Generating Bleeding Edge</id>
            <phase>generate-test-sources</phase>
            <goals>
              <goal>java</goal>
            </goals>
            <configuration>
              <mainClass>com.foreseeti.mal.Main</mainClass>
              <arguments>
                <argument>${project.basedir}/src/test/resources/generator/reference/bled.mal</argument>
                <argument>--args</argument>
                <argument>path=${project.basedir}/target/generated-bled-sources/bled,package=bled,core=false</argument>
              </arguments>
              <testSourceRoot>${project.basedir}/target/generated-bled-sources/bled</testSourceRoot>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
